[gd_scene load_steps=4 format=2]

[ext_resource path="res://mods/WebWardrobe/outfits.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxTexture" id=2]

[node name="Control" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_right = 628.0
margin_bottom = 481.0
scroll_horizontal_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 628.0
margin_bottom = 481.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vbox" type="VBoxContainer" parent="ScrollContainer/HBoxContainer"]
margin_right = 628.0
margin_bottom = 481.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/vbox"]
margin_right = 628.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "save outfit"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/HBoxContainer/vbox"]
margin_top = 18.0
margin_right = 628.0
margin_bottom = 42.0

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/HBoxContainer/vbox/HBoxContainer"]
margin_right = 456.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_length = 32
shortcut_keys_enabled = false
placeholder_text = "Name"

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/HBoxContainer/vbox/HBoxContainer"]
margin_left = 460.0
margin_right = 468.0
margin_bottom = 24.0
custom_constants/separation = 8
custom_styles/separator = SubResource( 1 )

[node name="SaveButton" type="Button" parent="ScrollContainer/HBoxContainer/vbox/HBoxContainer"]
margin_left = 472.0
margin_right = 544.0
margin_bottom = 24.0
rect_min_size = Vector2( 72, 0 )
text = "Save"

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/HBoxContainer/vbox/HBoxContainer"]
margin_left = 548.0
margin_right = 552.0
margin_bottom = 24.0
custom_constants/separation = 2
custom_styles/separator = SubResource( 1 )

[node name="ReloadButton" type="Button" parent="ScrollContainer/HBoxContainer/vbox/HBoxContainer"]
margin_left = 556.0
margin_right = 628.0
margin_bottom = 24.0
rect_min_size = Vector2( 72, 0 )
text = "Reload"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/HBoxContainer/vbox"]
margin_top = 46.0
margin_right = 628.0
margin_bottom = 62.0
custom_constants/separation = 16
custom_styles/separator = SubResource( 2 )

[node name="Label2" type="Label" parent="ScrollContainer/HBoxContainer/vbox"]
margin_top = 66.0
margin_right = 628.0
margin_bottom = 80.0
custom_colors/font_color = Color( 1, 0.933333, 0.835294, 1 )
text = "saved outfits"
valign = 1

[node name="outfits_cont" type="VBoxContainer" parent="ScrollContainer/HBoxContainer/vbox"]
margin_top = 84.0
margin_right = 628.0
margin_bottom = 84.0

[connection signal="focus_entered" from="ScrollContainer/HBoxContainer/vbox/HBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="ScrollContainer/HBoxContainer/vbox/HBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/vbox/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/vbox/HBoxContainer/ReloadButton" to="." method="_on_ReloadButton_pressed"]
